--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
         "web-vitals": "^1.1.2"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "set PORT=5051 && react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "server": "json-server --port 5050 --watch -H 192.168.123.189 db.json"
+        "server": "json-server --port 5050 --watch -H 10.227.3.20 db.json"
     },
     "eslintConfig": {
         "extends": [
