--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "set PORT=5051 && react-scripts start",
+    "start": "json-server --port 5050 --watch db.json && react-scripts start",
+    "heroku-postbuild": "npm install && npm run start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
