--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [[redirects]]
-  from = "/api/*"
-  to = "https://<your-app-endpoint>.herokuapp.com/api/:splat"
+  from = "/list/*"
+  to = "https://ducaoya-todo.herokuapp.com/list/:splat"
   status = 200
 
 [[redirects]]
