--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --port 5050 --watch db.json"
+    "server": "json-server --port process.env.PORT||5050 --watch db.json"
   },
   "eslintConfig": {
     "extends": [
